修改文件测试

--- a/08_组件实例三大属性3_refs/4_createRef.html
+++ b/08_组件实例三大属性3_refs/4_createRef.html
@@ -36,6 +36,7 @@
             console.log(this.myRef.current)
             console.log(this.myRef2.current)
         }
+
         render(){
             const {isHot} = this.state
             return(
@@ -47,6 +48,7 @@
         }
     }
     
+    console.log("变化内容")
     // 2.渲染
     ReactDOM.render(<Demo/>,document.getElementById('test')) 
 
