再修改一次吧

--- a/08_组件实例三大属性3_refs/4_createRef.html
+++ b/08_组件实例三大属性3_refs/4_createRef.html
@@ -47,8 +47,10 @@
             )
         }
     }
-    
+
     console.log("变化内容")
+    
+    console.log("再修改一次吧")
     // 2.渲染
     ReactDOM.render(<Demo/>,document.getElementById('test')) 
 
